--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Nov 18 16:10:11 EST 2021
-sdk.dir=/Users/anagha/Library/Android/sdk
+#Tue Dec 07 16:55:23 EST 2021
+sdk.dir=C\:\\Users\\Evan\\AppData\\Local\\Android\\Sdk
