--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Dec 13 21:43:20 EST 2021
-sdk.dir=C\:\\Users\\Evan\\AppData\\Local\\Android\\Sdk
+#Tue Dec 14 03:05:59 EST 2021
+sdk.dir=/Users/anagha/Library/Android/sdk
